--- a/src/components/Header/header.module.sass
+++ b/src/components/Header/header.module.sass
@@ -1,19 +1,18 @@
 .header
-  width: 100%
+  width: 100vw
   z-index: 100
   position: fixed
   top: 0
   padding: 10px 0
-  transition: top 0.6s
+  transition: top 0.8s
   background-color: rgba(#F7F9FB, 0.7)
   &_hidden
     background-color: rgba(#F7F9FB, 0.7)
     z-index: 100
     top: -78.34px
-    width: 100%
-    padding: 10px
+    width: 100vw
     position: fixed
-    transition: top 0.6s
+    transition: top 0.8s
 
 .map
   font-size: 3rem
