--- a/src/components/Cards/PlaceCards/card.module.sass
+++ b/src/components/Cards/PlaceCards/card.module.sass
@@ -3,15 +3,20 @@
   height: 100%
   padding: 30px
   border-radius: 50px
-  width: 890px
+  max-width: 890px
+  width: 46vw
   max-height: 540px
   background-color: #fff
-  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2)
+  -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 35px 15px rgba(255,13,13,0)
+  box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 35px 15px rgba(255,13,13,0)
+  margin-bottom: 15px
+  user-select: none
   &__info
     padding-right: 50px
     min-height: 100%
     display: flex
     flex-direction: column
+    position: absolute
   &__name
     font-size: 2.5rem
     font-weight: 600
@@ -31,7 +36,7 @@
     padding-top: 20px
     flex: 1 1 auto
   &__author
-    font-size: 1.5rem
+    font-size: 0.8rem
     color: #636668
   &__reactions
     display: flex
@@ -80,12 +85,85 @@
     div
       border-radius: 50px
       background: no-repeat center
-
+      width: 20%
   &Slider
     display: flex
     flex-wrap: nowrap
     div
       position: relative
+  
+
+@media (max-width: 1680px) 
+  .m
+    flex-direction: column
+    align-items: center
+    padding: 0
+    font-family: "Comfortaa" !important
+    border-radius: 60px
+    background-color: rgba(0, 0, 0, 0.0)
+    &__features
+      flex: none
+      margin-top: auto
+    &__info 
+      position: absolute !important // или absolute с другими параметрами
+      width: 70%
+      z-index: 100
+      top: 50px
+      color: white
+      min-height: calc( 100% - 70px )
+    &__author
+      color: white
+    &__desc
+      color: white
+    &__img 
+      position: absolute // абсолютное позиционирование для перекрытия
+      top: 0
+      left: 0
+      z-index: 1 // уменьшение z-index для изображения
+      width: 100%
+      max-width: none
+      div
+        background-color: rgba(0, 0, 0, 0.0) !important
+      &::after
+        border-radius: 50px
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
+        background-color: rgba(0, 0, 0, 0.3) // Черный фон с 50% прозрачности
+        z-index: 1 // Убедитесь, что z-index выше контента внутри __img, но ниже других элементов
+
+@media (max-width: 1440px)
+  .m
+    &__name
+      font-size: 2rem
+    &__area
+      font-size: 2rem
+
+@media (max-width: 1024px)
+  .m
+    &__name
+      font-size: 1.7rem
+      font-weight: bold
+    &__area
+      font-size: 1.7rem
+      font-weight: bold
+    &__desc
+      line-height: 1.6rem
+
+@media (max-width: 768px)
+  .m
+    width: 90%
+    &__name
+    &__area
+    &__desc
+    &__info
+      padding-right: 0
+      width: 90%
+      top: 40px
+      left: 20px
 
 
 .s
