--- a/src/pages/Auth/auth.module.sass
+++ b/src/pages/Auth/auth.module.sass
@@ -4,7 +4,6 @@
   flex-direction: column
   align-items: center
   flex: 1 1 auto
-  padding-left: 100px
   padding-bottom: 100px
   justify-content: center
   background-color: rgba(black, 0.6)
@@ -97,3 +96,12 @@ form
   a
     color: white
 
+@media (max-width: 500px)
+  form
+    width: 380px
+    input
+      width: 280px
+    button
+      width: 292px
+    h1
+      font-size: 55px
