--- a/src/pages/PlacePage/place.module.sass
+++ b/src/pages/PlacePage/place.module.sass
@@ -53,17 +53,13 @@
       color: red
   &__reactions
     display: flex
-    position: relative
     padding: 33px 0
-    &_like
-      position: absolute
-      left: 50px
+    div
+      padding-left: 15px
 
   &__info
-    display: flex
-    align-items: flex-start
-    width: 1440px
     margin: 0 auto
+    width: 75vw
     max-width: calc(100% - 40px)
     padding-top: 60px
   &__desc
@@ -71,6 +67,7 @@
     font-weight: 500
     line-height: 2rem
     padding-right: 80px
+    text-align: justify
   &__near
     padding-top: 60px
     &_items
@@ -86,18 +83,20 @@
     font-weight: 500
 
   &__photos
-    width: fit-content
     padding: 0 20px 20px 0
     margin-top: 60px
     border-radius: 30px
-    background-color: #F7F9FB
     div
       border-radius: 30px
 
   &__map
     position: relative
+    float: right
+    margin-left: 40px
+    margin-bottom: 10px
     background-color: #31708E
     border-radius: 20px
+    width: 250px
     color: #fff
     font-size: 1.1rem
     &_info
@@ -112,8 +111,38 @@
   &__towerImg
     position: absolute
     top: 550px
-    right: -100px
+    left: 160px
 
+@media (max-width: 768px)
+  .place
+    &__info
+      width: 100vw
+    &__towerImg
+      display: none
+    &__desc
+      font-size: 1rem
+      padding-right: 0
+
+@media (max-width: 546px)
+  .place
+    &__area
+      font-size: 0.8rem
+    &__name
+      font-size: 2rem
+    &__info
+      width: 100vw
+    &__towerImg
+      display: none
+    &__desc
+      font-size: 1rem
+      padding-right: 0
+    &__map
+      width: 100%
+
+@media (max-width: 400px)
+  .place
+    &__categories
+      font-size: 0.8rem
   
 
   
