--- a/src/pages/PlacePage/place.module.sass
+++ b/src/pages/PlacePage/place.module.sass
@@ -86,6 +86,7 @@
     padding: 0 20px 20px 0
     margin-top: 60px
     border-radius: 30px
+    margin-left: -20px
     div
       border-radius: 30px
 
